Eventos: Crud completo + documentacao + testes
