# routes/eventos.js
@@ -1,0 +1,13 @@
+var express = require('express');
+var router = express.Router();
+var EventosController = require('../controllers/EventosController');
+var auth = require('../middlewares/ensureAuthenticated')
+
+/* USERS ROUTES */
+router.get('/', EventosController.index);
+router.post('/store', EventosController.store);
+router.get('/:id', EventosController.show);
+router.put('/update', EventosController.update);
+router.delete('/destroy', EventosController.destroy);
+
+module.exports = router;
